--- a/app/views/task_templates/index.html.erb
+++ b/app/views/task_templates/index.html.erb
@@ -1,7 +1,7 @@
 <% @page_title = "Task Templates - #{Setting.productName}" %>
 
 <% content_for :navigation do %>
-  <%= render :partial => "companies/navigation", :locals => {:selected => "templates"} %>
+  <%= render :partial => "companies/navigation", :locals => {:selected => "task_templates"} %>
 <% end %>
 
 <legend>
