--- a/app/views/project_templates/index.html.erb
+++ b/app/views/project_templates/index.html.erb
@@ -12,7 +12,7 @@
 <ul>
   <% @project_templates.each do |template| %>
     <li>
-      <%= link_to template, edit_project_template_path(template.task_num) %>
+      <%= link_to template, edit_project_template_path(template) %>
       <div style="display:inline;" class="task-action">
         <%= link_to('<i class="icon-remove"></i>'.html_safe, project_template_path(template), :method => :delete,
             :confirm => _("Are you sure?"), :title => _("Delete %s",template.name ), :rel => "tooltip") %>
