--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -11,7 +11,7 @@
       <% if current_user.admin?%>
         <%= link_to _("Delete"), project_path(@project), :method => "delete", :confirm => "Really delete #{@project.name}?", :class => "btn btn-mini btn-danger pull-right" %>
       <% end %>
-      <% if current_user.can?( @project, 'grant' ) || current_user.admin > 0 %>
+      <% if !@project.template? && (current_user.can?( @project, 'grant' ) || current_user.admin > 0) %>
         <% if @project.complete? %>
           <%= link_to( _("Re-Open"), revert_project_path(@project), :confirm => "Really revert #{@project.name}?", :method => :post, :class => "btn") %>
         <% else %>
