project clone with milestones, score_rules, project_permissions and users

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -3,6 +3,7 @@
 <%= form_tag({:action => 'create'}, :class => "form-horizontal") do %>
   <fieldset id="project_form">
     <legend><%= _'New Project'%></legend>
+    <%= hidden_field_tag :template_id, @template.try(:id) %>
     <%= render :partial => "form" %>
     <% if current_user.all_projects.size > 0 %>
       <div class="control-group">
