--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,8 +1,8 @@
-<% @page_title = "Project : #{@project.name} - #{Setting.productName}" %>
+<% @page_title = "Project #{'Template' if @project.template?}: #{@project.name} - #{Setting.productName}" %>
 
 <%= form_for(@project, :html => {:class => "form-horizontal"}) do %>
   <fieldset id="project_form">
-    <legend><%=_ 'Edit Project' %>
+    <legend><%= @project.template? ? _('Edit Project Template') : _('Edit Project') %>
       <%= link_to_tasks_filtered_by(_("View Tasks"), @project, :class => "btn btn-success pull-right") %>
     </legend>
     <%= render :partial => "form" %>
