Fix bad merges, add translations

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -43,7 +43,7 @@
 <% if @project.template? || (!@project.template? && @project.new_record?) %>
 <script type="text/javascript">jQuery("#project_start_at").datepicker({dateFormat: '<%= current_user.dateFormat %>'});</script>
 <div class="control-group">
-  <label for="project_start_at"><%=_ 'Start' %></label>
+  <label for="project_start_at"><%= @project.human_name :start_at %></label>
   <div class="controls">
     <%= text_field 'project',
                    'start_at',
