--- a/app/views/project_templates/index.html.erb
+++ b/app/views/project_templates/index.html.erb
@@ -6,7 +6,7 @@
 
 <legend>
   Project Templates
-  <%= link_to _('New project template'), new_project_template_path, :class => "btn pull-right" %>
+  <%= link_to t('project_templates.new_template'), new_project_template_path, :class => "btn pull-right" %>
 </legend>
 
 <ul>
@@ -15,7 +15,7 @@
       <%= link_to template, edit_project_template_path(template) %>
       <div style="display:inline;" class="task-action">
         <%= link_to('<i class="icon-remove"></i>'.html_safe, project_template_path(template), :method => :delete,
-            :confirm => _("Are you sure?"), :title => _("Delete %s",template.name ), :rel => "tooltip") %>
+            :confirm => t('shared.are_you_sure'), :title => t('project_templates.delete', model: template.name ), :rel => "tooltip") %>
       </div>
     </li>
   <% end %>
