--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,34 +1,37 @@
 <div class="control-group">
-  <label for="user_name"><%= t("users.name") %></label>
+  <%= f.label :name %>
   <div class="controls">
-    <%= text_field 'user', 'name'  %>
+    <%= f.text_field :name %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_username"><%= t("users.username") %></label>
+  <%= f.label :username %>
   <div class="controls">
-    <%= text_field 'user', 'username', :autocomplete => "off" %>
+    <%= f.text_field :username, autocomplete: 'off' %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_password"><%= t("users.password") %></label>
+  <%= f.label :password %>
   <div class="controls">
-    <%= password_field 'user', 'password', :autocomplete => "off"  %>
+    <%= f.password_field :password, autocomplete: 'off' %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_customer_id"><%= t("users.company") %></label>
+  <%= f.label :company %>
   <div class="controls">
-    <%= hidden_field_tag("user[customer_id]", @user.customer_id, :id => "user_customer_id", :class => "auto_complete_id") %>
+    <%= f.hidden_field :customer_id, id: 'user_customer_id', class: 'auto_complete_id' %>
     <%= text_field :customer, :name, {:id=>"user_customer_name", :value => @user.customer.try(:name)} %>
-    <a href="<%= @user.customer.nil? ? "#" : "/customers/edit/#{@user.customer.id}" %>" id="user_customer_link"><i class="icon-share" title=<%= t("users.goto_company") %>></i></a>
+
+    <a href="<%= @user.customer.nil? ? "#" : "/customers/edit/#{@user.customer.id}" %>" id="user_customer_link">
+      <i class="icon-share" title=<%= t("users.goto_company") %>></i>
+    </a>
   </div>
 </div>
 
-<%= render(:partial => "/common/custom_attributes", :locals => { :object => @user }) %>
+<%= render "/common/custom_attributes", object: @user %>
 
 <% if @user.avatar? -%>
   <div class="control-group">
@@ -41,9 +44,9 @@
 <% end -%>
 
 <div class="control-group">
-  <label><%= t("users.new_avatar") %></label>
+  <%= f.label :avatar %>
   <div class="controls">
-    <%= file_field :user, :avatar %>
+    <%= f.file_field :avatar %>
     <br/>
     <span class="optional" style="clear:both;">
       <%= t 'hint.user.avatar' %>
@@ -52,72 +55,73 @@
 </div>
 
 <div class="control-group">
-  <label for="user_locale"><%= t("users.language") %></label>
+  <%= f.label :locale %>
   <div class="controls">
-    <%= select 'user', 'locale', I18n.available_locales %>
+    <%= f.select :locale, I18n.available_locales %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_time_zone"><%= t("users.location") %></label>
+  <%= f.label :time_zone %>
   <div class="controls">
-    <%= time_zone_select 'user', 'time_zone', TZInfo::Timezone.all.sort, :model => TZInfo::Timezone %>
+    <%= f.time_zone_select 'time_zone', TZInfo::Timezone.all.sort, :model => TZInfo::Timezone %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_receive_notifications"><%= t("users.receive_notifications") %></label>
+  <%= f.label :receive_notifications %>
   <div class="controls">
-    <%= check_box 'user', 'receive_notifications' %>
+    <%= f.check_box :receive_notifications %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_receive_own_notifications"><%= t("users.receive_own_notifications") %></label>
+  <%= f.label :receive_own_notifications %>
   <div class="controls">
-    <%= check_box 'user', 'receive_own_notifications' %>
+    <%= f.check_box :receive_own_notifications %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_auto_add"><%= t("users.auto_add_to_customer_tasks", customer: @user.customer.try(:name)) %></label>
+  <%= f.label :auto_add_to_customer_tasks,
+              t("users.auto_add_to_customer_tasks", customer: f.object.customer.try(:name)) %>
   <div class="controls">
-    <%= check_box "user", "auto_add_to_customer_tasks" %>
+    <%= f.check_box :auto_add_to_customer_tasks %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_active"><%= t("users.active") %></label>
+  <%= f.label :active %>
   <div class="controls">
-    <%= check_box(:user, :active) %>
+    <%= f.check_box :active %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_time_format"><%= t("users.time_format") %></label>
+  <%= f.label :time_format %>
   <div class="controls">
-    <%= select 'user', 'time_format', [ ['16:00', '%H:%M'], ['4:00 PM', '%I:%M%p'] ] %>
+    <%= f.select :time_format, [ ['16:00', '%H:%M'], ['4:00 PM', '%I:%M%p'] ] %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_date_format"><%= t("users.date_format") %></label>
+  <%= f.label :date_format %>
   <div class="controls">
-    <%= select 'user', 'date_format', [ ['1/21/2007', '%m/%d/%Y'], ['21/1/2007', '%d/%m/%Y'], ['2007-1-21', '%Y-%m-%d'] ] %>
+    <%= f.select :date_format, [ ['1/21/2007', '%m/%d/%Y'], ['21/1/2007', '%d/%m/%Y'], ['2007-1-21', '%Y-%m-%d'] ] %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_option_tracktime"><%= t("users.track_time") %></label>
+  <%= f.label :option_tracktime %>
   <div class="controls">
-    <%= check_box 'user', 'option_tracktime' %>
+    <%= f.check_box :option_tracktime %>
   </div>
 </div>
 
 <div class="control-group">
-  <label for="user_option_avatars"><%= t("users.show_avatars") %></label>
+  <%= f.label :show_avatars %>
   <div class="controls">
-    <%= check_box 'user', 'option_avatars' %>
+    <%= f.check_box :option_avatars %>
   </div>
 </div>
 
