--- a/app/views/layouts/basic.html.erb
+++ b/app/views/layouts/basic.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale %>">
   <head>
+    <meta charset='utf-8'>
     <%= javascript_include_tag 'application' %>
     <%= yield :head %>
     <link href='http://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
@@ -9,7 +10,6 @@
 
     <%= csrf_meta_tag %>
     <title><%= @page_title || Setting.productName %></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <% if Setting.version %>
       <meta content="jobsworth <%= Setting.version %>" name="version"></meta>
