--- a/app/views/layouts/blank.html.erb
+++ b/app/views/layouts/blank.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale %>">
   <head>
+    <meta charset='utf-8'>
     <%= stylesheet_link_tag 'application' %>
     <%= csrf_meta_tag %>
     <title><%= @page_title || Setting.productName %></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <% if Setting.version %>
       <meta content="jobsworth <%= Setting.version %>" name="version"></meta>
