Remove unused render_task_for helper method

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -8,5 +8,5 @@
 
 <%= form_tag(action, { :multipart => "true", :id => "taskform" }) do %>
   <%# render form partial but not timer %>
-  <%= render_task_form(false) %>
+  <%= render 'tasks/form', show_timer: false %>
 <% end %>
