--- a/app/views/tasks/_edit_form.html.erb
+++ b/app/views/tasks/_edit_form.html.erb
@@ -1,8 +1,9 @@
 <% attrs = ajax ? {:remote => true, :'data-type' => "json"} : {} %>
 <% show_timer = current_user.option_tracktime.to_i == 1 && !(@current_sheet && @current_sheet.task) && controller.class == TasksController %>
 
-<%= form_tag({ :action => 'update', :id => @task}, { :multipart => "true", :id => "taskform", :method => :put }.merge(attrs)) do -%>
-  <%= render_task_form(show_timer) %>
+<%= form_tag({ :action => 'update', :id => @task},
+             { :multipart => "true", :id => "taskform", :method => :put }.merge(attrs)) do -%>
+  <%= render 'tasks/form', show_timer: show_timer %>
 <% end %>
 
 <%= render(:partial=> 'worktime_dialog') %>
