--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,4 +1,4 @@
 <% @page_title = t("tasks.title", num: @task.task_num, title: "#{@task.name} - #{Setting.productName}") %>
 
-<%= render :partial => "tasks/edit_form", :locals => {:ajax => request.xhr?} %>
+<%= render 'tasks/edit_form', ajax: request.xhr? %>
 
