--- a/app/views/layouts/basic.html.erb
+++ b/app/views/layouts/basic.html.erb
@@ -2,6 +2,12 @@
 <html lang="<%= I18n.locale %>">
   <head>
     <meta charset='utf-8'>
+    <%= javascript_include_tag 'i18n-require' %>
+    <script type="text/javascript">
+      I18n.defaultLocale = "<%= I18n.default_locale %>";
+      I18n.locale = "<%= I18n.locale %>";
+    </script>
+
     <%= javascript_include_tag 'application' %>
     <%= yield :head %>
     <link href='http://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
