--- a/app/views/tasks/_dependency.html.erb
+++ b/app/views/tasks/_dependency.html.erb
@@ -6,7 +6,7 @@
   <% if dependency.done? %>
     <%= image_tag "tick.png", :border=> "0" %>
   <% end %>
-  <%= link_to_task(dependency) %>
+  <%= link_to_task(dependency, show_project: true) %>
   <%= hidden_field_tag("dependencies[]", dependency.task_num) %>
   <span class="divider"></span>
 </div>
