new header (like Fluenta)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,11 @@
  *= require billing
  *= require planning
  *= require email_addresses
+ 
+ *= require header
+ 
  *= require_self
+ 
  */
 
 @import "old";
