Handle possible errors when selecting filters on the tasks list page

--- a/app/views/task_filters/_search_filter_keys.html.erb
+++ b/app/views/task_filters/_search_filter_keys.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/flash', flash: flash %>
 
 <%= render :partial => "/task_filters/qualifier", :collection => current_task_filter.qualifiers %>
 <%= render :partial => "/task_filters/keyword", :collection => current_task_filter.keywords %>
