--- a/app/views/users/filters.html.erb
+++ b/app/views/users/filters.html.erb
@@ -32,7 +32,7 @@
 <table class="table table-striped table-bordered">
 <% @private_filters.each do |tf| %>
   <tr id="tf_<%= tf.id %>">
-    <td><%= select_task_filter_link(tf) -%> <%= _"[Shared]" if tf.shared? -%></td>
+    <td><%= select_task_filter_link(tf) -%> <%= t 'task_filters.shared' if tf.shared? -%></td>
     <td><%= link_to_toggle_status(tf, current_user) %></td>
     <td>
       <% if tf.user == current_user or current_user.admin? -%>
