--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -25,58 +25,9 @@
         </div>
       </div>
     </div>
-    <div id="header-logged-mainmenu" class="clearfix">
-      <div class="left-logged-menu">
-        <div class="mainmenu-item selected">
-          <div class="center">
-            <span><a href="#">Jobsworth</a></span>
-            <span class="notification-count"><a href="">2</a></span>
-          </div>
-        </div>
-        <div class="mainmenu-item">
-          <div class="center">
-            <span><a href="#">Igénylések</a></span>
-          </div>
-        </div>
-        <div class="mainmenu-item">
-          <div class="center">
-            <span><a href="#">Útnyilvántartás</a></span>
-          </div>
-        </div>
-        <div class="mainmenu-item">
-          <div class="center">
-            <span><a href="#">Szerződések</a></span>
-          </div>
-        </div>
-      </div>
-      <div class="header-more-logged-menu">
-        <div class="header-more-icon"> >> </div>
-        <div class="header-more-menu">          
-          <div class="mainmenu-item">
-            <div class="center">
-              <span><a href="#">Szállítói adatok</a></span>
-            </div>
-          </div>
-          <div class="mainmenu-item">
-            <div class="center">
-              <span><a href="#">Kimutatások</a></span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="right-logged-menu">
-        <div class="help-menu">
-          <a href="#" title="Segítség"></a>
-        </div>
-        <div class="admin-menu">
-          <div class="mainmenu-item">
-            <div class="center">
-              <span><a href="#">Admin</a></span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
+    <%#= render 'fluenta_menu' %>
+
   </div> <!-- end header-logged-center -->
 </div> <!-- end header-logged -->
 
@@ -97,7 +48,7 @@
       </div>
     </div>
   <% end %>
-  
+
   <div class="submenu-item drop-down">
     <div class="center">
       <span><a href="#"><%= t('tabmenu.tasks') %></a></span>
@@ -121,7 +72,7 @@
       <span><%= link_to t('tabmenu.planning'), :controller => 'timeline', :action => 'index' %></span>
     </div>
   </div>
-  
+
   <% if current_user.can_any?(current_user.projects, 'report') %>
     <div class="submenu-item">
       <div class="center">
@@ -130,7 +81,7 @@
       </div>
     </div>
   <% end %>
-  
+
   <% if current_user.company.show_wiki? %>
     <div class="submenu-item">
       <div class="center">
@@ -156,7 +107,7 @@
       <%= link_to t('tabmenu.milestones'), milestones_path %>
     </div>
   </div>
-  
+
   <% if Setting.contact_creation_allowed && current_user.can_view_clients? %>
     <div class="submenu-item drop-down">
       <div class="center">
@@ -179,7 +130,7 @@
       </div>
     </div>
   <% end %>
-  
+
   <%= render :partial => "layouts/menubar_search" %>
 
   <div class="clearer"></div>
