--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,9 +7,9 @@
 <%= render(:partial => "task_filters/search_filter", :locals => { :redirect_params => { :tag => params[:tag] }}) %>
 
 <ul class="nav nav-tabs">
-  <li class="active"><a href="/tasks"><i class="icon-list"></i> <%= t("tasks.icon_list") %> </a></li>
-  <li><a href="/tasks/calendar"><i class="icon-calendar"></i> <%= t("tasks.icon_calendar") %> </a></li>
-  <li><a href="/tasks/gantt"><i class="icon-align-left"></i> <%= t("tasks.icon_gantt") %> </a></li>
+  <li class="active"><a href="<%= tasks_path %>"><i class="icon-list"></i> <%= t("tasks.icon_list") %> </a></li>
+  <li><a href="<%= calendar_tasks_path %>"><i class="icon-calendar"></i> <%= t("tasks.icon_calendar") %> </a></li>
+  <li><a href="<%= gantt_tasks_path %>"><i class="icon-align-left"></i> <%= t("tasks.icon_gantt") %> </a></li>
 </ul>
 
 <div id="task_grid"></div>
