--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -16,7 +16,9 @@
           :title => t("shared.customer_placeholder")
         }
     %>
-    <a href="<%= @project.customer.nil? ? "#" : "/customers/edit/#{@project.customer.id}" %>" id="project_customer_link"><i class="icon-share" title=<%= t("users.goto_company") %>></i></a>
+    <%= link_to (@project.customer || new_customer_path), id: 'project_customer_link' do %>
+      <i class="icon-share" title="<%= t("users.goto_company") %>"></i>
+    <% end %>
 
   </div>
 </div>
