--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -207,8 +207,17 @@ function toggleWorkLogApproval(sender, workLogId) {
 */
 function updateAutoCompleteField(event, ui) {
   var edit_customer_path = "<%= CGI.unescape url.edit_customer_path('{id}') %>";
+
   jQuery("#resource_customer_id").val(ui.item.id);
   jQuery('#resource_customer_link').attr("href", resolve_url(edit_customer_path, {id: ui.item.id});
+}
+
+/*Adds the selected customer to the new project*/
+function addCustomerToProject(event, ui){
+  var edit_customer_path = "<%= CGI.unescape url.edit_customer_path('{id}') %>";
+
+  jQuery('#project_customer_id').val(ui.item.id);
+  jQuery('#project_customer_link').attr("href", resolve_url(edit_customer_path, {id: ui.item.id});
 }
 
 jQuery(document).ready(function() {
@@ -221,11 +230,6 @@ jQuery(document).ready(function() {
   jQuery(".datefield").datepicker({ constrainInput: false, dateFormat: userDateFormat});
 });
 
-/*Adds the selected customer to the new project*/
-function addCustomerToProject(event, ui){
-  jQuery('#project_customer_id').val(ui.item.id);
-  jQuery('#project_customer_link').attr("href", "/customers/edit/" + ui.item.id);
-}
 
 function addCustomerToUser(event, ui){
   jQuery('#user_customer_id').val(ui.item.id);
