Remove hardcoded link from gantt.js

--- a/app/assets/javascripts/gantt.js.erb
+++ b/app/assets/javascripts/gantt.js.erb
@@ -1,6 +1,11 @@
+<% url = Rails.application.routes.url_helpers %>
 var jobsworth = jobsworth || {}
 
 jobsworth.Gantt = (function($){
+
+  var gantt_tasks_path = function(format) {
+                           resolve_url("<%= CGI.unescape url.gantt_tasks_path(format: '{format}') %>", {format: format})
+                         };
 
   function Gantt(options) {
     this.options = options;
@@ -15,7 +20,7 @@ jobsworth.Gantt = (function($){
   Gantt.prototype.init = function() {
     var self = this;
     this.options.container.gantt({
-      source: "/tasks/gantt?format=json",
+      source: gantt_tasks_path('json'),
       scale: "days",
       minScale: "days",
       maxScale: "months",
